# monero-wallet-api

./: .gitmodules  LICENSE  README.md
docs/: nodes-and-wallets.md  payment-gateway-guide.md  wallet-files.md  wasm-memory-management.md
frost-dkg/: Cargo.toml
frost-dkg/src/: dkg.rs  lib.rs  monero.rs
mids/: mid-0001.md
rust/: Cargo.toml  Dockerfile
rust/cuprate/rpc/types/src/: bin.rs
rust/serai/processor/src/: cosigner.rs
rust/src/: lib.rs
rust/src/block_parsing/: mod.rs
rust/src/keypairs/: mod.rs
rust/src/transaction_building/: decoy_selection.rs  inputs.rs  mod.rs  transaction.rs
seedphrase/: README.md  package.json  tsconfig.json
seedphrase/src/: api.ts
seedphrase/tests/: tsconfig.json  validation.test.ts
standard-checkout/: .gitignore  README.md  build.ts  bun.lockb  checkout.ts  db.ts  dev.ts  make_regtest_wallet.ts  package.json  runOnStart.ts  scanner.ts  start.ts
standard-checkout/backend/: backend.ts  viewpair.ts
standard-checkout/db/: db.ts  migrate.ts  schema.ts
standard-checkout/db/migrations/: 0000_tiresome_magneto.sql  0000_watery_alex_wilder.sql  0001_fat_senator_kelly.sql
standard-checkout/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
typescript/: .gitignore  README.md  bun.lockb  checksum.txt  index.ts  package.json  tsconfig.json  wasm_checksum.txt  worker_checksum.txt
typescript/scripts/: inlineWasmFileMacro.ts  regtest_gen.ts  regtest_genblocks.ts  regtest_popblocks.ts  stagenet_gen.ts  testnet_gen.ts  wasmFile.ts
typescript/templates/: inlineMacro.ts
typescript/templates/wasm/: wasmFile.ts
typescript/templates/workers/: buildworker.ts  worker.ts
typescript/tests/: api.test.ts  connection_status_path.test.ts  node_url_getblocks_bin_scan.test.ts  reorg_handling.test.ts  scan_cache_reorg_execution.test.ts  tx_sending.test.ts  view_pair_getblocks_bin_scan.test.ts
typescript/tests/acceptance/: dont_rescan.test.ts  escrow.test.ts  reorg_handling.test.ts
typescript/tests/blocksbuffer/integration/: blocksBufferFetchLoop.test.ts  regtest-blocksBufferFetchLoop.test.ts  remote-blocksBufferFetchLoop.test.ts
typescript/tests/connection-status/unit/: connection_status_path.test.ts
typescript/tests/fixtures/getBlocksBinResponse/: 1490621922843919234  1588463574274939272  2881707887725243572  3352581500087156228  3947725734640724569  5840461070792676632
typescript/tests/nodeurl/integration/: node_url_getblocks_bin_scan.test.ts
typescript/tests/scanCacheOpened/integration/: scanCacheOpened.test.ts
typescript/tests/scanCacheOpened/unit/: graceful_shutdown.test.ts  many_empty_state.test.ts  open_wallets_logs.test.ts
typescript/tests/scanLoop/integration/: scanCoordination.test.ts  scanLoop.test.ts
typescript/tests/scanLoop/unit/: anchorSelection.test.ts  scanCoordination.test.ts  scanResult.test.ts  untrusted_json_validation_verify.test.ts
typescript/tests/scansettings/integration/: scanSettingsOpened.test.ts
typescript/tests/send-functionality/integration/: tx_sending.test.ts
typescript/tests/viewpair/integration/: view_pair_getblocks_bin_scan.test.ts
typescript/wallet-api/: api.ts  index.ts  wasi.ts  wasmFile.ts
typescript/wallet-api/io/: BunFileInterface.ts  atomicWrite.ts  indexedDB.ts  logging.ts  readDir.ts  sleep.ts
typescript/wallet-api/keypairs-seeds/: keypairs.ts  writeKeypairs.ts
typescript/wallet-api/multisig/: DistributedKeyGenerator.ts  MultiSigTxSigner.ts  escrow.ts  multisig.ts
typescript/wallet-api/node-interaction/: binaryEndpoints.ts  jsonEndpoints.ts  nodeUrl.ts  rpcApi.ts
typescript/wallet-api/scanning-syncing/: backgroundWorker.ts  computeKeyImage.ts  connectionStatus.ts  connectionStatusOpened.ts  openWallet.ts  scanCacheOpened.ts  scanResult.ts  scanSettings.ts  scanWithCache.ts
typescript/wallet-api/scanning-syncing/blocksbuffer/: blocksBufferFetchLoop.ts  blocksbufferCoordination.ts  getBlocksbinBuffer.ts
typescript/wallet-api/scanning-syncing/scanresult/: computeKeyImage.ts  getBlocksbinBuffer.ts  reorg.ts  scanCache.ts  scanCacheOpened.ts  scanCoordination.ts  scanLoop.ts  scanResult.ts  scanStats.ts  scanWithCache.ts
typescript/wallet-api/scanning-syncing/worker-entrypoints/: worker.ts  workerMultiple.ts
typescript/wallet-api/scanning-syncing/worker-mains/: coordinator-main.ts  cpubound-main.ts  multisig-main.ts  worker.ts  workerMultiple.ts
typescript/wallet-api/scansettings/: scanSettingsOpened.ts
typescript/wallet-api/send-functionality/: conversion.ts  inputSelection.ts  multisig.ts  transactionBuilding.ts
typescript/wallet-api/tools/: monero-tools.ts
typescript/wallet-api/viewpair/: ViewPair.ts  ViewPairs.ts
typescript/wallet-api/wasm-processing/: wasi.ts  wasmFile.ts  wasmProcessor.ts
