[package]
name = "monero-wallet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
monero-serai = { path = "./serai/networks/monero" }
monero-wallet = { path = "./serai/networks/monero/wallet" }
curve25519-dalek = { version = "4", default-features = false, features = [
    "alloc",
    "zeroize",
] }
hex = "0.4.3"
zeroize = { version = "^1.5", default-features = false, features = [
    "zeroize_derive",
] }

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
