[package]
name = "monero-wallet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cuprate-types = { path = "./cuprate/types", default-features = false, features = [
    "epee",
] }
cuprate-rpc-types = { path = "./cuprate/rpc/types" }
cuprate-epee-encoding = { path = "./cuprate/net/epee-encoding" }
curve25519-dalek = { version = "4", default-features = false, features = [
    "alloc",
    "zeroize",
] }
hex = "0.4.3"
zeroize = { version = "^1.5", default-features = false, features = [
    "zeroize_derive",
] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde = "1.0.217"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
monero-oxide = { git = "https://github.com/monerochan-ecosystem/monero-oxide", version = "0.1.4-alpha" }
monero-wallet = { git = "https://github.com/monerochan-ecosystem/monero-oxide", version = "0.1.0" }
monero-io = { git = "https://github.com/monerochan-ecosystem/monero-oxide", version = "0.1.0" }
std-shims = { version = "0.1.4", default-features = false }
rand_distr = { version = "0.4", default-features = false }
[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
